2009-04-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Post-release version suffix added.
	* configure.ac (AC_CONFIG_MACRO_DIR), Makefile.am (ACLOCAL_AMFLAGS):
	Add m4 dir as automake includes, as required by the new libtool.

2009-04-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Bump library revision.
	* NEWS, configure.ac:
	=== Version 0.2.1 ===

2009-04-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie-0.2.pc.in: Remove blank Requires: line.

2009-04-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/alpha-map.h, datrie/trie.h: Revise documentation.

2009-04-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/fileutils.h, datrie/fileutils.c
	(make_full_path, file_open, file_length): Remove unused codes.
	* datrie/triedefs.h (TrieIOMode): Remove unused typedef.

2009-04-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* datrie/Makefile.am, datrie/libdatrie.def -> datrie/libdatrie.map:
	Replace libtool symbol exports with symbol versioning, to ease
	upgrading across SONAME.

2009-03-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix gcc warnings.

	* tools/trietool.c (conv_to_alpha): Cast 'out_p' pointer before
	comparing.
	* tools/trietool.c (command_add_list, command_delete_list):
	Make sure 'saved_conv' is initialized before use.
	* datrie/trie.c (trie_new_from_file): Remove unused 'alt_map' var.

2009-03-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configura.ac: Post-release version suffix added.

	* datrie/trie.h (trie_save): Document parameter 'path'.
	* doc/Doxygen.in: Update format to doxygen 1.5.8.

2009-03-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS, configure.ac:
	=== Version 0.2.0 ===

2009-03-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Makefile.am, +README.migration:
	Add migration documentation.

2008-12-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
