@@ -6,7 +6,7 @@ pkginclude_HEADERS =	\
 	alpha-map.h	\
 	trie.h
 
-EXTRA_DIST = libdatrie.map
+EXTRA_DIST = libdatrie.map libdatrie.def
 
 INCLUDES = -I$(top_srcdir)
 
@@ -28,8 +28,16 @@ libdatrie_la_SOURCES =	\
 	alpha-map-private.h	\
 	alpha-map.c
 
+if LD_HAS_VERSION_SCRIPT
+EXPORTS_FLAGS = -Wl,-version-script -Wl,$(srcdir)/libdatrie.map
+EXPORTS_DEPS = libdatrie.map
+else
+EXPORTS_FLAGS = -export-symbols $(srcdir)/libdatrie.def
+EXPORTS_DEPS = libdatrie.def
+endif
+
 libdatrie_la_LDFLAGS =	-no-undefined \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
-	-Wl,--version-script=$(srcdir)/libdatrie.map
-libdatrie_la_DEPENDENCIES = libdatrie.map
+	$(EXPORTS_FLAGS)
+libdatrie_la_DEPENDENCIES = $(EXPORTS_DEPS)
 
